# Mnemosyne-Hermes_second_brain_agent

./: .gitignore  .yamllint.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-DOCS  README.md  SECURITY.md  lychee.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  hardware_profile.md  skill_proposal.md
.github/workflows/: ci.yml  markdown-link-check.yml  structure-check.yml
_archive/2026-06-05-v4-plan/: CHANGELOG.md  README.md  manifest.json  restore.sh  verify.py
docs/: 00_index.md
docs/01_對話與調研紀錄/: 2026-06-05_Hermes生態調研紀錄.md  2026-06-05_v4規劃會話紀錄.md  2026-06-05_架構A_vs_B_決策矩陣.md  2026-06-05_模型選型_Qwen3.6_vs_Gemma4.md  2026-06-05_調研思考鏈.md  2026-06-05_開放問題Q01-Q08.md  2026-06-05_開源組件調研紀錄.md  2026-06-05_風險登錄.md
docs/02_方案文檔/: AGENTS.md  Hermes_Agent_整合指南.md  Hermes_Skill_範本庫.md  Open_WebUI_整合指南.md  Phase_0_啟動手冊.md  Phase_1_部署指南.md  Phase_2_索引流水線指南.md  Phase_3_Hermes整合指南.md  Phase_4_評估與回饋指南.md  Phase_5_進階路線指南.md  RPC_拆分指南.md  Tailscale_私網設定指南.md  個人AI第二腦落地方案_v4.md  架構B_開源組件整合表.md  評估測試集_v2.md  風險登錄表.md
docs/06_備份與同步/: sync_onedrive.sh  sync_raid.sh  同步策略.md  版本標籤規範.md  還原演練.md
docs/07_更新日誌/: README.md
examples/: README.md  hermes_config.yaml  indexer_config.yaml
src/hermes_skills/dit-metadata/: SKILL.md  manifest.json
src/hermes_skills/dit-metadata/src/: dit_metadata_server.py
src/hermes_skills/dit-offload/: SKILL.md  manifest.json
src/hermes_skills/dit-offload/src/: dit_offload_server.py
src/hermes_skills/filesystem-search/: README.md  SKILL.md  manifest.json  tests.py
src/hermes_skills/filesystem-search/src/: filesystem_server.py
src/hermes_skills/qdrant-search/: README.md  SKILL.md  manifest.json  tests.py
src/hermes_skills/qdrant-search/src/: qdrant_server.py
src/hermes_skills/video-slice/: README.md  SKILL.md  manifest.json  tests.py
src/hermes_skills/video-slice/src/: video_slice_server.py
src/launchd/: ai.brain.hermes.plist  ai.brain.indexer.plist  ai.brain.ollama.plist  ai.brain.openwebui.plist  ai.brain.qdrant.plist  ai.brain.rpcserver.plist
src/llama_cpp/: README.md
src/ollama/: Modelfile.gemma4
src/scripts/: benchmark_llm.sh  eval_runner.py  indexer.py  mnemosyne_backup.py  phase0_bootstrap.sh  qdrant_snapshot.py  ralph_watchdog.py  snapshot.sh
src/systemd/: ai-brain-llama-server.service  ai-brain-qdrant-mirror.service  ai-brain-rpc-server.service
src/tailscale/: acls.json
tests/: README.md  conftest.py  eval_v2_100.jsonl  requirements.txt  test_dit_skills.py  test_hermes_skills.py  test_index_pipeline.py  test_mcp_servers.py  test_qdrant_named_vectors.py
